[gd_scene load_steps=17 format=4 uid="uid://1sn4rb1gkyev"]

[ext_resource type="Script" uid="uid://c5ccesy75lk6b" path="res://visible_collision_polygon_2d.gd" id="1_ibouv"]
[ext_resource type="Script" uid="uid://b1qaovoi8c5cy" path="res://level.gd" id="1_lfggx"]
[ext_resource type="PackedScene" uid="uid://dr6bexbxl0i01" path="res://player.tscn" id="1_wxdcu"]
[ext_resource type="PackedScene" uid="uid://dxdkdao1ii2pi" path="res://finish_line.tscn" id="3_gsvmf"]
[ext_resource type="FontFile" uid="uid://yeqt407l6qh7" path="res://fonts/nes_cyrillic.ttf" id="5_mkiwt"]
[ext_resource type="Texture2D" uid="uid://dxbv7asup5xi4" path="res://textures/meter_empty.png" id="6_1ainy"]
[ext_resource type="Shader" uid="uid://d28wrp08rmg76" path="res://level.gdshader" id="7_km5ld"]
[ext_resource type="Texture2D" uid="uid://b26udu1o5uhck" path="res://textures/meter.png" id="8_i2t4f"]
[ext_resource type="PackedScene" uid="uid://w7oqh7uxy5w4" path="res://ice_platform.tscn" id="9_i2t4f"]
[ext_resource type="PackedScene" uid="uid://drtf3vmty10h3" path="res://cannon.tscn" id="10_8cye3"]
[ext_resource type="Texture2D" uid="uid://dvqk4wob5txfb" path="res://textures/tiles.png" id="11_2orkt"]
[ext_resource type="PackedScene" uid="uid://cw2t30sl6ptkx" path="res://switch.tscn" id="12_aicyk"]

[sub_resource type="LabelSettings" id="LabelSettings_xoaqf"]
font = ExtResource("5_mkiwt")
font_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cye3"]
shader = ExtResource("7_km5ld")
shader_parameter/fill_amount = 1.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aicyk"]
texture = ExtResource("11_2orkt")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.17985725, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.7985859, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
6:1/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8b0r0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aicyk")

[node name="Level" type="Node2D"]
script = ExtResource("1_lfggx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 128, 64, 128, 96, 112, 128, 112, 128, 128, 174.76666, 128, 256, 128, 256, 112, 352, 112, 384, 128, 401.47678, 128, 512, 128, 544, 112, 832, 112, 832, 88, 896, 88, 896, 112, 896, 184, 0, 184)
script = ExtResource("1_ibouv")

[node name="VisibleCollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(0, 104)
polygon = PackedVector2Array(960, 88, 1152, 88, 1192, 104, 1344, 104, 1344, 192, 960, 192)
script = ExtResource("1_ibouv")

[node name="Player" parent="." instance=ExtResource("1_wxdcu")]
position = Vector2(16, 128)

[node name="FinishLine" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_gsvmf")]
offset_left = 1719.0
offset_top = -104.0
offset_right = 1783.0
offset_bottom = 608.0
player = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "0.6"
label_settings = SubResource("LabelSettings_xoaqf")

[node name="MeterContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -156.0
grow_vertical = 0

[node name="MeterEmpty" type="TextureRect" parent="CanvasLayer/MeterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1ainy")
expand_mode = 1
stretch_mode = 4

[node name="MeterFull" type="TextureRect" parent="CanvasLayer/MeterContainer"]
material = SubResource("ShaderMaterial_8cye3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_i2t4f")
expand_mode = 1
stretch_mode = 4

[node name="IcePlatform" parent="." instance=ExtResource("9_i2t4f")]
position = Vector2(998, 87)

[node name="Cannon" parent="." instance=ExtResource("10_8cye3")]
position = Vector2(835, 60.000034)
rotation = -0.17453292

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAgAAAACAAAAAAAJAAgAAAACAAAAAAAKAAgAAAACAAAAAAALAAgAAAACAAAAAAAMAAgAAAACAAAAAAANAAgAAAACAAAAAAAOAAgAAAACAAAAAAAPAAgAAAACAAAAAAAAAAkAAAAHAAEAAAABAAkAAAAHAAEAAAACAAkAAAAHAAEAAAADAAkAAAAHAAEAAAAEAAkAAAAHAAEAAAAFAAkAAAAHAAEAAAAGAAkAAAAHAAEAAAAGAAoAAAAHAAEAAAAFAAoAAAAHAAEAAAAEAAoAAAAHAAEAAAADAAoAAAAHAAEAAAACAAoAAAAHAAEAAAABAAoAAAAHAAEAAAAAAAoAAAAHAAEAAAABAAsAAAAHAAEAAAACAAsAAAAHAAEAAAAAAAsAAAAHAAEAAAADAAsAAAAHAAEAAAAEAAsAAAAHAAEAAAAFAAsAAAAHAAEAAAAGAAsAAAAHAAEAAAAHAAsAAAAHAAEAAAAHAAoAAAAHAAEAAAAHAAkAAAAHAAEAAAAIAAkAAAAHAAEAAAAJAAkAAAAHAAEAAAAIAAoAAAAHAAEAAAAIAAsAAAAHAAEAAAAJAAsAAAAHAAEAAAAJAAoAAAAHAAEAAAAKAAoAAAAHAAEAAAAKAAkAAAAHAAEAAAAKAAsAAAAHAAEAAAALAAsAAAAHAAEAAAALAAoAAAAHAAEAAAALAAkAAAAHAAEAAAAMAAkAAAAHAAEAAAAMAAoAAAAHAAEAAAAMAAsAAAAHAAEAAAANAAsAAAAHAAEAAAANAAoAAAAHAAEAAAANAAkAAAAHAAEAAAAOAAkAAAAHAAEAAAAPAAkAAAAHAAEAAAAQAAkAAAAHAAEAAAAQAAoAAAAHAAEAAAAQAAsAAAAHAAEAAAAPAAsAAAAHAAEAAAAOAAsAAAAHAAEAAAAOAAoAAAAHAAEAAAAPAAoAAAAHAAEAAAAAAAgAAAACAAAAAAABAAgAAAACAAAAAAACAAgAAAACAAAAAAADAAgAAAACAAAAAAAGAAcAAAACAAAAAAAHAAcAAAACAAAAAAAEAAgAAAAHAAEAAAAFAAgAAAAHAAEAAAAGAAgAAAAHAAEAAAAHAAgAAAAHAAEAAAAQAAcAAAACAAAAAAARAAcAAAACAAAAAAASAAcAAAACAAAAAAATAAcAAAACAAAAAAAUAAcAAAACAAAAAAAVAAcAAAACAAAAAAAYAAgAAAACAAAAAAAZAAgAAAACAAAAAAAaAAgAAAACAAAAAAAbAAgAAAACAAAAAAAcAAgAAAACAAAAAAAdAAgAAAACAAAAAAAeAAgAAAACAAAAAAAfAAgAAAACAAAAAAAiAAcAAAACAAAAAAAjAAcAAAACAAAAAAAkAAcAAAACAAAAAAAlAAcAAAACAAAAAAAmAAcAAAACAAAAAAAnAAcAAAACAAAAAAAoAAcAAAACAAAAAAApAAcAAAACAAAAAAAqAAcAAAACAAAAAAArAAcAAAACAAAAAAAsAAcAAAACAAAAAAAtAAcAAAACAAAAAAAuAAcAAAACAAAAAAAvAAcAAAACAAAAAAAwAAcAAAACAAAAAAAxAAcAAAACAAAAAAAyAAcAAAACAAAAAAAzAAcAAAACAAAAAAAQAAgAAAAHAAEAAAARAAgAAAAHAAEAAAASAAgAAAAHAAEAAAATAAgAAAAHAAEAAAAUAAgAAAAHAAEAAAAVAAgAAAAHAAEAAAAWAAgAAAAHAAEAAAAXAAkAAAAHAAEAAAAXAAgAAAAHAAEAAAAXAAoAAAAHAAEAAAAYAAkAAAAHAAEAAAAZAAkAAAAHAAEAAAAaAAkAAAAHAAEAAAAbAAkAAAAHAAEAAAAcAAkAAAAHAAEAAAAdAAkAAAAHAAEAAAAeAAkAAAAHAAEAAAAfAAkAAAAHAAEAAAAfAAoAAAAHAAEAAAAeAAoAAAAHAAEAAAAdAAoAAAAHAAEAAAAcAAoAAAAHAAEAAAAbAAoAAAAHAAEAAAAaAAoAAAAHAAEAAAAZAAoAAAAHAAEAAAAWAAkAAAAHAAEAAAAVAAkAAAAHAAEAAAAUAAkAAAAHAAEAAAATAAkAAAAHAAEAAAASAAkAAAAHAAEAAAARAAkAAAAHAAEAAAARAAoAAAAHAAEAAAASAAoAAAAHAAEAAAATAAoAAAAHAAEAAAAUAAoAAAAHAAEAAAAVAAoAAAAHAAEAAAAWAAoAAAAHAAEAAAAWAAsAAAAHAAEAAAAVAAsAAAAHAAEAAAAUAAsAAAAHAAEAAAATAAsAAAAHAAEAAAASAAsAAAAHAAEAAAARAAsAAAAHAAEAAAAXAAsAAAAHAAEAAAAYAAsAAAAHAAEAAAAYAAoAAAAHAAEAAAAZAAsAAAAHAAEAAAAaAAsAAAAHAAEAAAAbAAsAAAAHAAEAAAAcAAsAAAAHAAEAAAAdAAsAAAAHAAEAAAAeAAsAAAAHAAEAAAAfAAsAAAAHAAEAAAAgAAsAAAAHAAEAAAAgAAoAAAAHAAEAAAAgAAkAAAAHAAEAAAAgAAgAAAAHAAEAAAAhAAgAAAAHAAEAAAAiAAgAAAAHAAEAAAAjAAgAAAAHAAEAAAAkAAgAAAAHAAEAAAAlAAgAAAAHAAEAAAAlAAkAAAAHAAEAAAAlAAoAAAAHAAEAAAAlAAsAAAAHAAEAAAAkAAsAAAAHAAEAAAAjAAsAAAAHAAEAAAAiAAsAAAAHAAEAAAAiAAoAAAAHAAEAAAAjAAoAAAAHAAEAAAAhAAoAAAAHAAEAAAAhAAkAAAAHAAEAAAAiAAkAAAAHAAEAAAAjAAkAAAAHAAEAAAAkAAoAAAAHAAEAAAAkAAkAAAAHAAEAAAAhAAsAAAAHAAEAAAAmAAgAAAAHAAEAAAAnAAgAAAAHAAEAAAAoAAgAAAAHAAEAAAApAAgAAAAHAAEAAAAqAAgAAAAHAAEAAAArAAgAAAAHAAEAAAAsAAgAAAAHAAEAAAAtAAgAAAAHAAEAAAAuAAgAAAAHAAEAAAAuAAkAAAAHAAEAAAAvAAkAAAAHAAEAAAAwAAkAAAAHAAEAAAAxAAkAAAAHAAEAAAAyAAkAAAAHAAEAAAAzAAkAAAAHAAEAAAAyAAgAAAAHAAEAAAAxAAgAAAAHAAEAAAAwAAgAAAAHAAEAAAAvAAgAAAAHAAEAAAAtAAkAAAAHAAEAAAAsAAkAAAAHAAEAAAArAAkAAAAHAAEAAAAqAAkAAAAHAAEAAAApAAkAAAAHAAEAAAAoAAkAAAAHAAEAAAAnAAkAAAAHAAEAAAAnAAoAAAAHAAEAAAAmAAoAAAAHAAEAAAAmAAkAAAAHAAEAAAAmAAsAAAAHAAEAAAAnAAsAAAAHAAEAAAAoAAsAAAAHAAEAAAAoAAoAAAAHAAEAAAApAAoAAAAHAAEAAAAqAAoAAAAHAAEAAAArAAoAAAAHAAEAAAAzAAoAAAAHAAEAAAAyAAsAAAAHAAEAAAAxAAsAAAAHAAEAAAAwAAsAAAAHAAEAAAAvAAsAAAAHAAEAAAAuAAoAAAAHAAEAAAAtAAoAAAAHAAEAAAAsAAoAAAAHAAEAAAAqAAsAAAAHAAEAAAApAAsAAAAHAAEAAAArAAsAAAAHAAEAAAAsAAsAAAAHAAEAAAAvAAoAAAAHAAEAAAAuAAsAAAAHAAEAAAAtAAsAAAAHAAEAAAAwAAoAAAAHAAEAAAAxAAoAAAAHAAEAAAAyAAoAAAAHAAEAAAA0AAoAAAAHAAEAAAAzAAgAAAAHAAEAAAA0AAgAAAAHAAEAAAA0AAcAAAAHAAEAAAA1AAcAAAAHAAEAAAA2AAcAAAAHAAEAAAA3AAcAAAAHAAEAAAA3AAgAAAAHAAEAAAA2AAgAAAAHAAEAAAA1AAgAAAAHAAEAAAA0AAkAAAAHAAEAAAAzAAsAAAAHAAEAAAA0AAsAAAAHAAEAAAA1AAsAAAAHAAEAAAA1AAoAAAAHAAEAAAA2AAoAAAAHAAEAAAA1AAkAAAAHAAEAAAA2AAkAAAAHAAEAAAA3AAoAAAAHAAEAAAA3AAkAAAAHAAEAAAA2AAsAAAAHAAEAAAA3AAsAAAAHAAEAAAA=")
tile_set = SubResource("TileSet_8b0r0")

[node name="Cannon2" parent="." instance=ExtResource("10_8cye3")]
position = Vector2(289, 82)
starts_disabled = true

[node name="Switch" parent="." instance=ExtResource("12_aicyk")]
position = Vector2(112, 102)
controlled_cannons = Array[NodePath]([NodePath("../Cannon2")])
